Correct vertical alignment of variable-height secondary items in featured news blocks.

--- a/_src/css/components/list-resource.css
+++ b/_src/css/components/list-resource.css
@@ -158,7 +158,7 @@
   flex-basis: calc((var(--switcher-target-container-width, 40rem) - 100%) * 999);
   
   & > .resource-listing {
-    align-self: center;
+    align-self: flex-start;
     flex-grow: 1;
     flex-basis: calc((var(--switcher-target-container-width, 40rem) - 100%) * 999);
   }
